// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongTermTrendBadge > Snapshot — ABOVE_TREND rendering 1`] = `
<span
  aria-label="Sopra SMA200 (+50.0%). Cautela: rischio di acquisto in cima. SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
  class="inline-flex w-fit items-center gap-2 rounded-full border px-3 py-1 text-sm font-medium bg-white text-slate-800 border-slate-300"
  data-signal="ABOVE_TREND"
  data-testid="long-term-trend-badge"
  role="img"
  title="Cautela: rischio di acquisto in cima. SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trending-up h-4 w-4 text-amber-600"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="22 7 13.5 15.5 8.5 10.5 2 17"
    />
    <polyline
      points="16 7 22 7 22 13"
    />
  </svg>
  <span
    data-testid="long-term-trend-badge-text"
  >
    Sopra SMA200 (+50.0%)
  </span>
</span>
`;

exports[`LongTermTrendBadge > Snapshot — BELOW_TREND rendering 1`] = `
<span
  aria-label="Sotto SMA200 (-20.0%). Mr. Market depresso — deep value potential. SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
  class="inline-flex w-fit items-center gap-2 rounded-full border px-3 py-1 text-sm font-medium bg-white text-slate-800 border-slate-300"
  data-signal="BELOW_TREND"
  data-testid="long-term-trend-badge"
  role="img"
  title="Mr. Market depresso — deep value potential. SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trending-down h-4 w-4 text-blue-600"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="22 17 13.5 8.5 8.5 13.5 2 7"
    />
    <polyline
      points="16 17 22 17 22 11"
    />
  </svg>
  <span
    data-testid="long-term-trend-badge-text"
  >
    Sotto SMA200 (-20.0%)
  </span>
</span>
`;

exports[`LongTermTrendBadge > Snapshot — INDETERMINATE rendering 1`] = `
<span
  aria-label="Trend lungo periodo non disponibile. SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
  class="inline-flex w-fit items-center gap-2 rounded-full border px-3 py-1 text-sm font-medium bg-slate-50 text-slate-400 border-slate-200"
  data-signal="INDETERMINATE"
  data-testid="long-term-trend-badge"
  role="img"
  title="SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-help h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  <span
    data-testid="long-term-trend-badge-text"
  >
    Trend lungo periodo non disponibile
  </span>
</span>
`;

exports[`LongTermTrendBadge > Snapshot — NEAR_TREND rendering 1`] = `
<span
  aria-label="In linea con SMA200 (2.0%). SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
  class="inline-flex w-fit items-center gap-2 rounded-full border px-3 py-1 text-sm font-medium bg-white text-slate-800 border-slate-300"
  data-signal="NEAR_TREND"
  data-testid="long-term-trend-badge"
  role="img"
  title="SMA200 = media mobile a 200 giorni. Advisory tecnico, non sostituisce il giudizio fondamentale."
>
  <svg
    aria-hidden="true"
    class="lucide lucide-minus h-4 w-4 text-slate-500"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
  </svg>
  <span
    data-testid="long-term-trend-badge-text"
  >
    In linea con SMA200 (2.0%)
  </span>
</span>
`;
